deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  namespace: <PROJECT>-<GROUP>
  labels:
    app: account
spec:
  replicas: 2
  minReadySeconds: 5
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: account
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: account
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - account
              topologyKey: kubernetes.io/hostname
      containers:
        - name: account
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              protocol: TCP
              containerPort: 8000
            - name: crpc
              protocol: TCP
              containerPort: 9000
            - name: grpc
              protocol: TCP
              containerPort: 10000
          resources:
            limits:
              memory: "4096Mi"
              cpu: "4000m"
            requests:
              memory: "256Mi"
              cpu: "1000m"
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 2
            successThreshold: 1
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: account-service-headless
  namespace: <PROJECT>-<GROUP>
  labels:
    app: account
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: crpc
      protocol: TCP
      port: 9000
    - name: grpc
      protocol: TCP
      port: 10000
  selector:
    app: account
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: <PROJECT>-<GROUP>
  labels:
    app: account
spec:
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8000
  selector:
    app: account
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: account-route
  namespace: <PROJECT>-<GROUP>
  labels:
    app: account
spec:
  parentRefs:
    - name: <PROJECT>-<GROUP>-gateway
      namespace: <PROJECT>-<GROUP>
  hostnames:
    - "<HOST>"
  rules: 
    - matches:
      - path:
          type: RegularExpression
          value: "^/account\\.[^/]+/[^/]+$"
      backendRefs:
        - name: account-service
          port: 8000
